@@ -2,7 +2,7 @@ var JAX=function(a,b){if("string"==typeof a){b=b||document;var c=b.querySelector
 JAX.all=function(a,b){if("string"==typeof a){b=b||document;for(var c=b.querySelectorAll(a),d=Array(c.length),f=0,e=c.length;f<e;f++)d[f]=new JAX.Node(c[f]);return new JAX.NodeArray(d)}return"object"==typeof a&&a.nodeType?new JAX.NodeArray(new JAX.Node(a)):a&&a instanceof JAX.Node?new JAX.NodeArray(a):null};
 JAX.make=function(a,b,c,d){b=b||{};c=c||{};d=d||document;if(!a||"string"!=typeof a)throw Error("First argument must be string.");if("object"!=typeof b)throw Error("Second argument must be associative array.");if("object"!=typeof c)throw Error("Third argument must be associative array.");if("object"!=typeof d||!d.nodeType&&-1==[9,11].indexOf(d.nodeType))throw Error("Fourth argument must be document element.");var f=a.match(/^([a-zA-Z]+[a-zA-Z0-9]*)/g)||[];if(1==f.length)a=a.substring(f[0].length,a.length);
 else throw Error("Tagname must be first in element definition");for(var e="",g=0,h=a.length;g<h;g++){var l=a[g];"#"==l?(e="id",b.id=""):"."==l?(e="className",b.className=b.className?b.className+" ":""):e&&(b[e]+=l)}a=d.createElement(f);for(var k in b)a[k]=b[k];for(k in c)a.style[k]=c[k];return new JAX.Node(a)};JAX.makeText=function(a,b){return new JAX.Node((b||document).createTextNode(a))};
-JAX.getTypeOf=function(a){if("number"==typeof a)return"number";if("string"==typeof a)return"string";if("undefined"==typeof a)return"undefined";if("function"==typeof a)return"function";if(!0===a||!1===a)return"boolean";if(null===a)return"null";a=Object.prototype.toString.call(a);return"[object Array]"==a?"array":"[object Date]"==a?"date":"object"};JAX.Node=JAK.ClassMaker.makeClass({NAME:"JAX.Node",VERSION:"1.02"});JAX.Node.ELEMENT_NODE=1;JAX.Node.TEXT_NODE=3;JAX.Node.COMMENT_NODE=8;
+JAX.getTypeOf=function(a){if("number"==typeof a)return"number";if("string"==typeof a)return"string";if("undefined"==typeof a)return"undefined";if("function"==typeof a)return"function";if(!0===a||!1===a)return"boolean";if(null===a)return"null";a=Object.prototype.toString.call(a);return"[object Array]"==a?"array":"[object Date]"==a?"date":"object"};JAX.Node=JAK.ClassMaker.makeClass({NAME:"JAX.Node",VERSION:"1.03"});JAX.Node.ELEMENT_NODE=1;JAX.Node.TEXT_NODE=3;JAX.Node.COMMENT_NODE=8;
 JAX.Node.DOCUMENT_NODE=9;JAX.Node.DOCUMENT_FRAGMENT_NODE=11;JAX.Node._events=[];JAX.Node._MEASUREABLEVALUE_REGEXP=/^(?:-)?\d+(\.\d+)?(%|em|in|cm|mm|ex|pt|pc)?$/i;JAX.Node._OPACITY_REGEXP=/alpha\(opacity=['"]?([0-9]+)['"]?\)/i;JAX.Node._BOX_SIZING=null;(function(){var a={boxSizing:"box-sizing",mozBoxSizing:"-moz-box-sizing",WebkitBoxSizing:"-webkit-box-sizing"},b=document.createElement("div"),c;for(c in a)if(c in b.style){JAX.Node._BOX_SIZING=a[c];break}})();
 JAX.Node.prototype.$constructor=function(a){this._node=a;this.jaxNodeType=a.nodeType};JAX.Node.prototype.$destructor=function(){-1!=[1,9].indexOf(this._node.nodeType)&&this.stopListening();this._node=null;this._jaxId=-1};JAX.Node.prototype.node=function(){return this._node};JAX.Node.prototype.find=function(a){return JAX(a,this._node)};JAX.Node.prototype.findAll=function(a){return JAX.all(a,this._node)};
 JAX.Node.prototype.addClass=function(a){if(1!=this._node.nodeType)return JAX.Report.show("warn","JAX.Node.addClass","You can not use this method for this node. Doing nothing.",this._node),this;"string"!=typeof a&&(a+="",JAX.Report.show("error","JAX.Node.addClass","Given arguments can be string, array of strings. Trying convert to string: "+a,this._node));a=a.split(" ");for(var b=0,c=a.length;b<c;b++)this._node.classList.add(a[b]);return this};
@@ -49,22 +49,22 @@ JAX.Node.prototype._inPixels=function(a){var b=this._node.style.left,c=this._nod
 JAX.Node.prototype._setOpacity=function(a){var b="";"ie"==JAK.Browser.client&&9>JAK.Browser.version?(b="filter",a=Math.round(100*a),a="progid:DXImageTransform.Microsoft.Alpha(opacity="+a+");"):b="opacity";this._node.style[b]=a+""};JAX.Node.prototype._getOpacity=function(){if("ie"==JAK.Browser.client&&9>JAK.Browser.version){var a="";this._node.style.filter.replace(JAX.NODE.OPACITY_REGEXP,function(b,c){a=c});return a?parseInt(a,10)/100+"":a}return this._node.style.opacity};
 JAX.Node.prototype._getSizeWithBoxSizing=function(a,b){var c=JAX.Node._BOX_SIZING?this.computedCss(JAX.Node._BOX_SIZING):null,d=0,f=0,e=0,g=0,h="padding-"+("width"==a?"left":"top"),l="padding-"+("width"==a?"right":"bottom"),k="border-"+("width"==a?"left":"top"),m="border-"+("width"==a?"right":"bottom");1==arguments.length&&(b="width"==a?this._node.offsetWidth:this._node.offsetHeight);if(!c||"content-box"==c)d=parseFloat(this.computedCss(h)),f=parseFloat(this.computedCss(l));"border-box"!=c&&(e=parseFloat(this.computedCss(k)),
 g=parseFloat(this.computedCss(m)));d&&isFinite(d)&&(b=-d);f&&isFinite(f)&&(b=-f);e&&isFinite(e)&&(b=-e);g&&isFinite(g)&&(b=-g);return b};JAX.Node.prototype._getText=function(a){for(var b="",c=0,d=a.childNodes.length;c<d;c++){var f=a.childNodes[c],e=f.tagName?f.tagName.toLowerCase():"";f.childNodes&&f.childNodes.length?b+=this._getText(f):"br"==e?b+="\n":f.nodeValue&&(b+=f.nodeValue)}return b};JAX.Node.prototype._destroyEvents=function(a){for(var b=0,c=a.length;b<c;b++){var d=a[b].id();JAK.Events.removeListener(d)}};
-JAX.NodeArray=JAK.ClassMaker.makeClass({NAME:"JAX.NodeArray",VERSION:"1.01"});JAX.NodeArray.prototype.$constructor=function(a){a=[].concat(a);var b=a.length;this._jaxNodes=Array(b);for(var c=0;c<b;c++){var d=a[c];if("object"==typeof d&&d.nodeType)this._jaxNodes[c]=JAX(d);else if(d instanceof JAX.Node)this._jaxNodes[c]=d;else throw Error("First argument must be array of JAX.Node instances or html nodes");}this.length=b};JAX.NodeArray.prototype.item=function(a){return this._jaxNodes[a||0]};
+JAX.NodeArray=JAK.ClassMaker.makeClass({NAME:"JAX.NodeArray",VERSION:"1.02"});JAX.NodeArray.prototype.$constructor=function(a){a=[].concat(a);var b=a.length;this._jaxNodes=Array(b);for(var c=0;c<b;c++){var d=a[c];if("object"==typeof d&&d.nodeType)this._jaxNodes[c]=JAX(d);else if(d instanceof JAX.Node)this._jaxNodes[c]=d;else throw Error("First argument must be array of JAX.Node instances or html nodes");}this.length=b};JAX.NodeArray.prototype.item=function(a){return this._jaxNodes[a||0]};
 JAX.NodeArray.prototype.items=function(a,b){if(!arguments.length)return this._jaxNodes.slice();b=b||this._jaxNodes.length;return this._jaxNodes.slice(a||0,b)};JAX.NodeArray.prototype.addClass=function(a){for(var b=0,c=this._jaxNodes.length;b<c;b++)this._jaxNodes[b].addClass(a);return this};JAX.NodeArray.prototype.haveClass=function(a){for(var b=0,c=this._jaxNodes.length;b<c;b++)if(!this._jaxNodes[b].hasClass(a))return!1;return!0};
 JAX.NodeArray.prototype.toggleClass=function(a){for(var b=0,c=this._jaxNodes.length;b<c;b++)this._jaxNodes[b].toggleClass(a);return this};JAX.NodeArray.prototype.removeClass=function(a){for(var b=0,c=this._jaxNodes.length;b<c;b++)this._jaxNodes[b].removeClass(a);return this};JAX.NodeArray.prototype.attr=function(a,b){for(var c=0,d=this._jaxNodes.length;c<d;c++)this._jaxNodes[c].attr(a,b);return this};
 JAX.NodeArray.prototype.css=function(a,b){for(var c=0,d=this._jaxNodes.length;c<d;c++)this._jaxNodes[c].css(a,b);return this};JAX.NodeArray.prototype.prop=function(a,b){for(var c=0,d=this._jaxNodes.length;c<d;c++)this._jaxNodes[c].prop(a,b);return this};JAX.NodeArray.prototype.appendTo=function(a){for(var b=0,c=this._jaxNodes.length;b<c;b++)this._jaxNodes[b].appendTo(a);return this};
 JAX.NodeArray.prototype.remove=function(){for(var a=0,b=this._jaxNodes.length;a<b;a++)this._jaxNodes[a].removeFromDOM();return this};JAX.NodeArray.prototype.areIn=function(a){for(var b=0,c=this._jaxNodes.length;b<c;b++)if(!this._jaxNodes[b].isIn(a))return!1;return!0};JAX.NodeArray.prototype.destroyNodes=function(){for(var a=0,b=this._jaxNodes.length;a<b;a++)this._jaxNodes[a].$destructor();this._jaxNodes=[]};
 JAX.NodeArray.prototype.listen=function(a,b,c,d){for(var f=this._jaxNodes.length,e=Array(f),g=0;g<f;g++)e[g]=this._jaxNodes[g].listen(a,b,c,d);return e};JAX.NodeArray.prototype.stopListening=function(a){for(var b=0,c=this._jaxNodes.length;b<c;b++)this._jaxNodes[b].stopListening(a);return this};JAX.NodeArray.prototype.forEachItem=function(a,b){this._jaxNodes.forEach(a,b||this);return this};JAX.NodeArray.prototype.filterItems=function(a,b){var c=this._jaxNodes.filter(a,b||this);return new JAX.NodeArray(c)};
 JAX.NodeArray.prototype.pushItem=function(a){a=JAX(a);this.length++;this._jaxNodes.push(a);return this};JAX.NodeArray.prototype.popItem=function(){this.length=Math.max(--this.length,0);return this._jaxNodes.pop()};JAX.NodeArray.prototype.shiftItem=function(){this.length=Math.max(--this.length,0);return this._jaxNodes.shift()};JAX.NodeArray.prototype.unshiftItem=function(a){a=JAX(a);this.length++;this._jaxNodes.unshift(a);return this};
-JAX.NodeArray.prototype.fade=function(a,b){for(var c=Array(this._jaxNodes.length),d=0,f=this._jaxNodes.length;d<f;d++)c[d]=this._jaxNodes[d].fade(a,b);return JAK.Promise.when(c)};JAX.NodeArray.prototype.fadeTo=function(a,b){for(var c=Array(this._jaxNodes.length),d=0,f=this._jaxNodes.length;d<f;d++)c[d]=this._jaxNodes[d].fadeTo(a,b);return JAK.Promise.when(c)};
-JAX.NodeArray.prototype.slide=function(a,b){for(var c=Array(this._jaxNodes.length),d=0,f=this._jaxNodes.length;d<f;d++)c[d]=this._jaxNodes[d].slide(a,b);return JAK.Promise.when(c)};JAX.Event=JAK.ClassMaker.makeClass({NAME:"JAX.Event",VERSION:"1.0"});JAX.Event.prototype.$constructor=function(a){this._e=a};JAX.Event.prototype.event=function(){return this._e};JAX.Event.prototype.prevent=function(){JAK.Events.cancelDef(this._e);return this};
-JAX.Event.prototype.stop=function(){JAK.Events.stopEvent(this._e);return this};JAX.Event.prototype.target=function(){return JAX(JAK.Events.getTarget(this._e))};JAX.Event.prototype.currentTarget=function(){return JAX(this._e.currentTarget)};JAX.Event.prototype.type=function(){return this._e.type};JAX.Listener=JAK.ClassMaker.makeClass({NAME:"JAX.Listener",VERSION:"1.0"});JAX.Listener.prototype.$constructor=function(a,b,c,d){this._jaxElm=a;this._type=c;this._method=d;this._id=b};
-JAX.Listener.prototype.unregister=function(){this._id&&(this._jaxElm.stopListening(this),this._id=null)};JAX.Listener.prototype.node=function(){return this._node};JAX.Listener.prototype.id=function(){return this._id};JAX.Listener.prototype.type=function(){return this._type};JAX.DOMBuilder=JAK.ClassMaker.makeClass({NAME:"JAX.DOMBuilder",VERSION:"2.0"});
+JAX.NodeArray.prototype.animate=function(a,b,c,d){for(var f=Array(this._jaxNodes.length),e=0,g=this._jaxNodes.length;e<g;e++)f[e]=this._jaxNodes[e].animate(a,b,c,d);return JAK.Promise.when(f)};JAX.NodeArray.prototype.fade=function(a,b){for(var c=Array(this._jaxNodes.length),d=0,f=this._jaxNodes.length;d<f;d++)c[d]=this._jaxNodes[d].fade(a,b);return JAK.Promise.when(c)};
+JAX.NodeArray.prototype.fadeTo=function(a,b){for(var c=Array(this._jaxNodes.length),d=0,f=this._jaxNodes.length;d<f;d++)c[d]=this._jaxNodes[d].fadeTo(a,b);return JAK.Promise.when(c)};JAX.NodeArray.prototype.slide=function(a,b){for(var c=Array(this._jaxNodes.length),d=0,f=this._jaxNodes.length;d<f;d++)c[d]=this._jaxNodes[d].slide(a,b);return JAK.Promise.when(c)};JAX.Event=JAK.ClassMaker.makeClass({NAME:"JAX.Event",VERSION:"1.0"});JAX.Event.prototype.$constructor=function(a){this._e=a};
+JAX.Event.prototype.event=function(){return this._e};JAX.Event.prototype.prevent=function(){JAK.Events.cancelDef(this._e);return this};JAX.Event.prototype.stop=function(){JAK.Events.stopEvent(this._e);return this};JAX.Event.prototype.target=function(){return JAX(JAK.Events.getTarget(this._e))};JAX.Event.prototype.currentTarget=function(){return JAX(this._e.currentTarget)};JAX.Event.prototype.type=function(){return this._e.type};JAX.Listener=JAK.ClassMaker.makeClass({NAME:"JAX.Listener",VERSION:"1.0"});
+JAX.Listener.prototype.$constructor=function(a,b,c,d){this._jaxElm=a;this._type=c;this._method=d;this._id=b};JAX.Listener.prototype.unregister=function(){this._id&&(this._jaxElm.stopListening(this),this._id=null)};JAX.Listener.prototype.node=function(){return this._node};JAX.Listener.prototype.id=function(){return this._id};JAX.Listener.prototype.type=function(){return this._type};JAX.DOMBuilder=JAK.ClassMaker.makeClass({NAME:"JAX.DOMBuilder",VERSION:"2.0"});
 JAX.DOMBuilder.prototype.$constructor=function(a){this._doc=a||document;this._jax={container:new JAX.Node(document.createDocumentFragment())};this._pointerJaxNode=null;this._stack=[]};JAX.DOMBuilder.prototype.open=function(a,b,c){if("string"==typeof a||"object"==typeof a&&a.nodeType)return this._stack.push(this._pointerJaxNode),this._pointerJaxNode=this.add(a,b,c);throw Error("First argument must be string with JAX.make compatible definition, node or instance of JAX.Node");};
 JAX.DOMBuilder.prototype.add=function(a,b,c){var d=a;"string"==typeof a?d=JAX.make(a,b,c):"object"==typeof a&&a.nodeType&&(d=JAX(a),b&&d.attr(b),c&&d.style(c));if(!(d instanceof JAX.Node)||9==d.jaxNodeType)throw Error("First argument must be string with JAX.make compatible definition, node or instance of JAX.Node");b&&d.attr(b);c&&d.css(c);this._pointerJaxNode?this._pointerJaxNode.add(d):this._jax.container.add(d);return d};
 JAX.DOMBuilder.prototype.addText=function(a){if("string"==typeof a)return a=JAX.makeText(a),this._pointerJaxNode?this._pointerJaxNode.add(a):this._jax.container.add(a),a;throw Error("First argument must be a string");};JAX.DOMBuilder.prototype.close=function(){if(this._stack.length)return this._pointerJaxNode=this._stack.pop(),this;throw Error("There is no opened element so you can not close anything");};
 JAX.DOMBuilder.prototype.appendTo=function(a){var b=null;"object"==typeof a&&a.nodeType||"string"==typeof a?b=JAX(a):a instanceof JAX.Node&&1==a.jaxNodeType&&(b=a);if(!b)throw Error("You are trying to append me to unsupported or null element. I can be appended only to html element or documentFragment element.");this._jax.container.appendTo(b);return this};JAX.DOMBuilder.prototype.getContainer=function(){return this._jax.container};
-JAX.DOMBuilder.prototype.clear=function(){this._jax.container.clear();this._stack=[];return this};JAX.FX=JAK.ClassMaker.makeClass({NAME:"JAX.FX",VERSION:"1.01",DEPEND:[{sClass:JAK.CSSInterpolator,ver:"2.1"}]});JAX.FX._TRANSITION_PROPERTY="";JAX.FX._TRANSITION_EVENT="";
+JAX.DOMBuilder.prototype.clear=function(){this._jax.container.clear();this._stack=[];return this};JAX.FX=JAK.ClassMaker.makeClass({NAME:"JAX.FX",VERSION:"1.02",DEPEND:[{sClass:JAK.CSSInterpolator,ver:"2.1"}]});JAX.FX._TRANSITION_PROPERTY="";JAX.FX._TRANSITION_EVENT="";
 (function(){var a={transition:"transitionend",OTransition:"oTransitionEnd",MozTransition:"transitionend",WebkitTransition:"webkitTransitionEnd",MSTransition:"MSTransitionEnd"},b;for(b in a)if(b in document.createElement("div").style){JAX.FX._TRANSITION_PROPERTY=b;JAX.FX._TRANSITION_EVENT=a[b];break}})();
 JAX.FX._SUPPORTED_PROPERTIES={width:{defaultUnit:"px",css:"width"},height:{defaultUnit:"px",css:"height"},top:{defaultUnit:"px",css:"top"},left:{defaultUnit:"px",css:"left"},bottom:{defaultUnit:"px",css:"bottom"},right:{defaultUnit:"px",css:"right"},fontSize:{defaultUnit:"px",css:"font-size"},opacity:{defaultUnit:"",css:"opacity"},color:{defaultUnit:"",css:"color"},backgroundColor:{defaultUnit:"",css:"background-color"}};JAX.FX._SUPPORTED_METHODS="ease linear ease-in ease-out ease-in-out cubic-bezier".split(" ");
 JAX.FX.prototype.$constructor=function(a){this._elm=a instanceof JAX.Node?a:new JAX.Node(a);this._properties=[];this._interpolators=[];this._transitionCount=0;this._running=!1;this._transitionSupport=!!JAX.FX._TRANSITION_PROPERTY};
