@@ -170,7 +170,7 @@ JAX.getTypeOf = function(value) {
 /**
  * @fileOverview node.js - JAX - JAk eXtended
  * @author <a href="mailto:jerrymf@gmail.com">Marek Fojtl</a>
- * @version 1.02
+ * @version 1.03
  */
 
 /**
@@ -179,7 +179,7 @@ JAX.getTypeOf = function(value) {
  */
 JAX.Node = JAK.ClassMaker.makeClass({
 	NAME: "JAX.Node",
-	VERSION: "1.02"
+	VERSION: "1.03"
 });
 
 JAX.Node.ELEMENT_NODE = 1;
@@ -1456,7 +1456,7 @@ JAX.Node.prototype._destroyEvents = function(eventListeners) {
 /**
  * @fileOverview nodearray.js - JAX - JAk eXtended
  * @author <a href="mailto:jerrymf@gmail.com">Marek Fojtl</a>
- * @version 1.01
+ * @version 1.02
  */
 
 /**
@@ -1465,7 +1465,7 @@ JAX.Node.prototype._destroyEvents = function(eventListeners) {
  */
 JAX.NodeArray = JAK.ClassMaker.makeClass({
 	NAME: "JAX.NodeArray",
-	VERSION: "1.01"
+	VERSION: "1.02"
 });
 
 /**
@@ -1817,6 +1817,16 @@ JAX.NodeArray.prototype.unshiftItem = function(node) {
 	return this;
 };
 
+JAX.NodeArray.prototype.animate = function(type, duration, start, end) {
+	var count = this._jaxNodes.length;
+	var promises = new Array(count);
+
+	for (var i=0, len=this._jaxNodes.length; i<len; i++) {
+		promises[i] = this._jaxNodes[i].animate(type, duration, start, end);
+	}
+	return JAK.Promise.when(promises);
+};
+
 /** 
  * @method animuje průhlednost dle typu
  * @example
@@ -1824,7 +1834,7 @@ JAX.NodeArray.prototype.unshiftItem = function(node) {
  * JAX.all("body div").fade("out", 2);
  *
  * @param {String} type typ "in" nebo "out"
- * @param {Number} duration délka animace v sec
+ * @param {Number | String} duration délka animace - lze zadat i jednotky s nebo ms
  * @returns {JAK.Promise}
  */
 JAX.NodeArray.prototype.fade = function(type, duration) {
@@ -1844,7 +1854,7 @@ JAX.NodeArray.prototype.fade = function(type, duration) {
  * JAX.all("body div").fadeTo(0.5, 2);
  *
  * @param {Number} opacityValue do jaké hodnoty od 0 do 1 se má průhlednost animovat
- * @param {Number} duration délka animace v sec
+ * @param {Number | String} duration délka animace - lze zadat i jednotky s nebo ms
  * @returns {JAK.Promise}
  */
 JAX.NodeArray.prototype.fadeTo = function(opacityValue, duration) {
@@ -1864,7 +1874,7 @@ JAX.NodeArray.prototype.fadeTo = function(opacityValue, duration) {
  * JAX.all("body div").slide("down", 1);
  *
  * @param {String} type udává typu efektu - "down", "up", "left" nebo "right"
- * @param {Number} duration délka animace v sec
+ * @param {Number | String} duration délka animace - lze zadat i jednotky s nebo ms
  * @returns {JAK.Promise}
  */
 JAX.NodeArray.prototype.slide = function(type, duration) {
@@ -2199,7 +2209,7 @@ JAX.DOMBuilder.prototype.clear = function() {
 /**
  * @fileOverview fx.js - JAX - JAk eXtended
  * @author <a href="mailto:jerrymf@gmail.com">Marek Fojtl</a>
- * @version 1.01
+ * @version 1.02
  */
 
 /**
@@ -2208,7 +2218,7 @@ JAX.DOMBuilder.prototype.clear = function() {
  */ 
 JAX.FX = JAK.ClassMaker.makeClass({
 	NAME: "JAX.FX",
-	VERSION: "1.01",
+	VERSION: "1.02",
 	DEPEND: [{
 		sClass: JAK.CSSInterpolator,
 		ver: "2.1"
